# iota-stardust-dev-challenges

./: .gitignore  Cargo.toml  README.md
find_controlling_address/: Cargo.toml  README.md
find_controlling_address/src/: main.rs
tangle/: Cargo.toml  README.md
tangle/src/: blockchain.rs  blowball.rs  sidetangle.rs
zeros_nft_id/: Cargo.toml  README.md
zeros_nft_id/src/: 0_generate_address.rs  1_mine_transaction.rs  2_check_ids.rs  3_send_block.rs
