[package]
name = "find_controlling_address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version ="1.1.1", default-features = false, features= ["client", "tls"] }
tokio = { version ="1.32.0", default-features = false, features= ["macros"] }
